# COPS

./: README.md
cops-verifier/: .env  README.md  example.rego  parser.py  server.py  test.py  wsgi.py
cops-verifier/OVH/: OVMF_CODE.fd
cops-verifier/demo/aws/: report.txt  vcek.pem
cops-verifier/demo/azure/: report.txt  vcek.pem
cops-verifier/demo/ovh/: report.txt
cops-verifier/examples/: csr.der  guest-report.tar
cops-verifier/nginx/: nginx.conf
cops-verifier/sev-tool/: sevtool
cops-verifier/static/css/: style.css
cops-verifier/static/js/: report.js
cops-verifier/systemd/: cops-verifier.service
cops-verifier/templates/: index.html  report.html
cops-verifier/test/aws_test/: json-report.json  vcek.pem
cops-verifier/test/malformed-test/: ark.cert  ask.cert  csr.pem  guest-report.tar  id.txt  json-report.json  report.txt  signature.sig  vcek.pem
cops-verifier/test/test-report/: csr.pem  guest-report.tar  id.txt  json-report.json  public_key.pem  signature.sig
cops-verifier/test/test-report-wrong/: a8074bc2-a25a-483e-aae6-39c045a0b8a1  ark.cert  ask.cert  csr.pem  id.txt  json-report.json  public_key.pem  report.txt  vcek.pem
tee-client/: .gitignore  Cargo.toml  README.md
tee-client/.cargo/: config.toml
tee-client/src/: aws.rs  aws_sign_v4.rs  azure.rs  bucket.rs  credentials.rs  enum_names.rs  main.rs  ovh.rs  report.rs  runtime.rs  support_fn.rs  vector.rs  wrappers.rs
