[package]
name = "tee-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[dependencies]
rcgen = "0.10.0"
pem = "1.0"
rustls = "0.20.6"
webpki-roots = "0.22.4"
webpki = "0.22.0"
curl = "0.4.44"
roxmltree = "0.14.1"
chrono = "0.4.23"
reqwest = { version = "0.11.18", features = ["json","blocking","multipart"] }
tar = "0.4.38"
try-catch = "0.2.2"
hyper = "0.14.23"
tokio-util = "0.7.4"
execute = "0.2.11"
log = {version = "0.4.17"}
simplelog = "0.12.0"
dotenv = "0.15.0"
hmac = "0.12.1"
rand = "0.8.5"
cronjob = "0.4.17"
sha2 = "0.10.6"
hex = "0.4.3"
aws-sign-v4 = "0.2.0"
geolocation = "0.2.1"
json = "0.12.4"
system_shutdown = "4.0.1"
openssl = { version = "0.10", features = ["vendored"] }
sudo = "0.5"
rust-s3 = "0.32.3"
tokio = { version = "1.20.1", features = ["full"] }
bollard = "0.14.0"              
futures-util = "0.3.23"
serde = "1.0.147"
serde_json = "1.0.87"
url = "2.3.1"
ring = "0.16.20"
http = "0.2.8"
sha256 = "1.1.1"
bytes = "1.4.0"
loopdev = "0.4.0"
sys-mount = "2.0.2"
red_asn1 = "0.3.5"
eagre-asn1 = "0.3.0"
crypto-hash = "0.3"
tempfile = "3.2"
flate2 = "1.0"
xml-rs = "0.8.17"